--- a/public/main.html
+++ b/public/main.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="../assets/img/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/index.css">
-  <!-- ADDING FONT AWESOME FOR BETTER ICONS -->
+  <link rel="stylesheet" href="../flashjs-master/dist/flash.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -27,7 +27,6 @@
     </div>
   </div>
   <!-- USER NOT FOUND MODAL  -->
-
   <div class="fullScreen user-not-found">
     <div class="middle">
       <div class="min-h-screen w-screen">
@@ -38,7 +37,7 @@
             <div class="relative bg-white rounded-lg shadow-sm">
               <!-- Modal header -->
               <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200">
-                <h3 class="text-xl font-semibold text-gray-900">
+                <h3 class="text-xl font-semibold text-gray-900 mssg">
                   No User Found
                 </h3>
               </div>
@@ -56,7 +55,111 @@
   </div>
 
 
-  <!-- REDESIGNED NAVBAR -->
+
+  <!-- ACCOUNT DELETE MODAL -->
+  <div class="fullScreen delete-modal">
+    <div id="popup-modal" tabindex="-1"
+      class=" flex justify-center align-center  overflow-y-auto overflow-x-hidden fixed top-10 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+      <div class="relative p-4 w-full max-w-md max-h-full ">
+        <div class="relative bg-white rounded-lg shadow-sm">
+          <button type="button"
+            class="close-delete-modal absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+            data-modal-hide="popup-modal">
+            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+            </svg>
+            <span class="sr-only">Close modal</span>
+          </button>
+          <div class="p-4 md:p-5 text-center">
+            <svg class="mx-auto mb-4 text-gray-400 w-12 h-12" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+              fill="none" viewBox="0 0 20 20">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+            </svg>
+            <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete your
+              account? <b><span class="text-sm text-red-500">This action can not be undone !!!</span></b></h3>
+            <button data-modal-hide="popup-modal" type="button"
+              class="confirm-delete-btn text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+              Yes, I'm sure
+            </button>
+            <button data-modal-hide="popup-modal" type="button"
+              class="close-delete-modal py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100">No,
+              cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- EDIT MODAL -->
+  <div class="fullScreen edit-modal">
+    <div id="edit-modal" tabindex="-1" aria-hidden="true"
+      class="flex justify-center align-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+      <div class="relative p-4 w-full max-w-md max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow-sm">
+          <!-- Modal header -->
+          <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200">
+            <h3 class="text-xl font-semibold text-gray-900">
+              Edit your information
+            </h3>
+            <button type="button"
+              class="close-edit-modal end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+              data-modal-hide="edit-modal">
+              <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 14 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+              </svg>
+              <span class="sr-only">Close modal</span>
+            </button> 
+          </div>
+          <!-- Modal body -->
+          <div class="p-4 md:p-5">
+            <form class="space-y-4" onsubmit="handleUpdate(event)">
+              <div class="grid grid-cols-2 gap-4">
+                <div>
+                  <label for="firstname" class="block mb-2 text-sm font-medium text-gray-900">First name</label>
+                  <input type="text" name="firstname" id="firstname"
+                    class="edit-first-name bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="John" required />
+                </div>
+                <div>
+                  <label for="lastname" class="block mb-2 text-sm font-medium text-gray-900">Last name</label>
+                  <input type="text" name="lastname" id="lastname"
+                    class="edit-last-name bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="Doe" required />
+                </div>
+              </div>
+              <div>
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
+                <input type="email" name="email" id="email" readonly disabled
+                  class="edit-email bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                  placeholder="name@company.com" required />
+              </div>
+              <button type="submit"
+                class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Save
+                changes</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- NAVBAR -->
   <header class="bg-gradient-to-r from-blue-600 to-blue-400 shadow-lg py-4">
     <div class="container mx-auto px-4">
       <div class="flex items-center justify-between">
@@ -89,21 +192,40 @@
             </div>
           </div>
           <!-- USER PROFILE -->
-          <div class="">
+          <div>
             <button class="flex items-center space-x-1 text-white hover:text-blue-100 transition-colors"
               id="user-profile">
-              <img
-                src="https://imgs.search.brave.com/ARCfKeOibDd6diwZINx0xnvl2LNybUAT12BOiJS_JDM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9yYXcu/Z2l0aHVidXNlcmNv/bnRlbnQuY29tL21v/bm8tY29tcGFueS9t/b25vLWljb25zL21h/c3Rlci9zdmcvdXNl/ci5zdmc"
-                alt="User Profile" class="w-8 h-8 rounded-full bg-white p-1">
+              <span
+                class="user-profile inline-flex items-center justify-center w-10 h-10 rounded-full bg-blue-600 text-white text-lg font-medium">
+
+              </span>
               <span class="hidden md:inline">Account</span>
               <i class="fas fa-chevron-down text-xs"></i>
             </button>
             <!-- USER DROPDOWN MENU -->
             <div id="profile-modal" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg py-1 z-10">
-              <a href="#" class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50">
-                <i class="fas fa-user-circle mr-2 text-blue-500"></i>
-                <span>Profile</span>
-              </a>
+              <div class="relative group">
+                <a href="#" class="flex items-center justify-between px-4 py-2 text-gray-700 hover:bg-blue-50">
+                  <div class="flex items-center">
+                    <i class="fas fa-user mr-2 text-blue-500"></i>
+                    <span>Profile</span>
+                  </div>
+                  <i class="fas fa-chevron-right text-xs"></i>
+                </a>
+                <div
+                  class="hidden absolute right-full top-0 mt-0 w-48 bg-white rounded-lg shadow-lg py-1 group-hover:block">
+                  <div href="#" class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50">
+                    <span>Name : <span class="user-name"></span></span>
+                  </div>
+                  <div href="#" class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50">
+                    <span>Email : <span class="user-email"></span></span>
+                  </div>
+                  <div href="#" class="flex items-center justify-around px-4 py-2 text-gray-700">
+                    <button class="w-100 pr-5 pl-5 pt-1 pb-1 bg-green-500 text-white rounded-lg edit-btn">Edit</button>
+                    <button class="w-50 pr-4 pl-4 pt-1 pb-1 bg-red-500 text-white rounded-lg delete-btn">Delete</button>
+                  </div>
+                </div>
+              </div>
               <div class="relative group">
                 <a href="#" class="flex items-center justify-between px-4 py-2 text-gray-700 hover:bg-blue-50">
                   <div class="flex items-center">
@@ -227,7 +349,7 @@
       </div>
     </div>
   </main>
-
+  <script src="../dist/src/ts/flash.min.js"></script>
   <script src="../dist/src/ts/apiservice.js"></script>
   <script src="../dist/src/ts/helping.js"></script>
   <script src="../dist/src/ts/main.js"></script>
