Enhance user favorites functionality by adding new API endpoints and interfaces, updating user data, and refining CSS styles.

--- a/public/main.html
+++ b/public/main.html
@@ -113,7 +113,7 @@
                   d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
               </svg>
               <span class="sr-only">Close modal</span>
-            </button> 
+            </button>
           </div>
           <!-- Modal body -->
           <div class="p-4 md:p-5">
@@ -183,8 +183,8 @@
         <div class="flex items-center space-x-6">
           <!-- FAVORITE ICON -->
           <div class="relative group">
-            <button class="text-white hover:text-blue-100 transition-colors">
-              <i class="fas fa-star text-xl"></i>
+            <button class="text-white transition-colors favorite-btn">
+              <i class="fas fa-star text-xl "></i>
             </button>
             <div
               class="hidden group-hover:block absolute -top-6 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs rounded-md py-1 px-2 whitespace-nowrap">
