Refactor favorites functionality by updating data structure, enhancing API methods, and improving button behavior for adding favorites.

--- a/public/main.html
+++ b/public/main.html
@@ -183,7 +183,7 @@
         <div class="flex items-center space-x-6">
           <!-- FAVORITE ICON -->
           <div class="relative group">
-            <button class="text-white transition-colors favorite-btn">
+            <button type="button" class="text-white transition-colors favorite-btn">
               <i class="fas fa-star text-xl "></i>
             </button>
             <div
